1. 提交代码和脚本

--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf .next out",
+    "export": "next build && next export",
+    "deploy": "npm run build && tar -czf deploy.tar.gz out/",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -22,6 +28,10 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "rimraf": "^5.0.5",
+    "prettier": "^3.2.5",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.12"
   }
 }
